# merkle

./: .gitignore  Cargo.toml  Makefile  README.md
pinocchio/: Cargo.toml  Makefile
pinocchio/src/: entrypoint.rs  lib.rs  state.rs  utils.rs
pinocchio/src/ix/: initialize.rs  insert.rs  mod.rs  verify.rs
pinocchio/tests/: merkle.rs
quasar/: Cargo.toml
src/: lib.rs  tests.rs
